--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.12",
     "node-sass": "^4.11.0",
+    "nprogress": "^0.2.0",
     "sass-loader": "^7.1.0",
     "vue": "^2.6.6",
     "vue-router": "^3.0.2"
